# OpenGLTutorial

./: .gitignore  README.md
boilerplate/: RBNSOpenGLView.mm  main.m
opengl.xcodeproj/: project.pbxproj
opengl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
partI/: AppDelegate.mm  Game.cpp  Game.hpp  RBNSOpenGLView.h  RBNSOpenGLView.mm
partII/: AppDelegate.h  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Pong.cpp  Pong.hpp  RBColor.cpp  RBColor.hpp  RBNSOpenGLView.mm  RBRenderHelper.cpp  RBRenderHelper.hpp  RBVector2.hpp
partIII/: AppDelegate.h  AppDelegate.mm  EAGLView.h  EAGLView.mm  Game.cpp  GameObject.cpp  Pong.hpp  RBColor.hpp  RBRenderHelper.cpp  RBVector2.cpp  TouchView.h  TouchView.mm  ViewController.h  ViewController.mm  main.m
partIV-update/app/src/main/cpp/: CMakeLists.txt
partIV-update/app/src/main/cpp/base/: RBColor.cpp  RBColor.hpp  RBGame.cpp  RBGame.hpp  RBGameObject.cpp  RBLog.cpp  RBMath.hpp  RBRender.cpp  RBRender.hpp  RBRenderHelper.cpp  RBRenderer.cpp  RBRenderer.hpp  RBShader.cpp  RBShader.hpp  RBShader2D.cpp  RBShader2D.hpp
partIV-update/app/src/main/cpp/game/: Pong.cpp  Pong.hpp
partIV-update/app/src/main/cpp/platform/: main.cpp
partIV-update/app/src/main/res/values-night/: themes.xml
partIV/app/src/main/: AndroidManifest.xml
partIV/app/src/main/cpp/: CMakeLists.txt  Game.hpp  GameObject.hpp  Pong.cpp  RBColor.cpp  RBRender.cpp  RBRenderHelper.cpp  RBRenderHelper.hpp  RBVector2.hpp
partIV/app/src/main/res/values/: strings.xml
partV/: build.gradle  settings.gradle  settings.gradle.kts
partV/app/: build.gradle
partV/app/src/main/: AndroidManifest.xml
partV/app/src/main/cpp/: CMakeLists.txt
partV/app/src/main/cpp/base/: RBColor.cpp  RBColor.hpp  RBCube.cpp  RBCube.hpp  RBGame.cpp  RBGame.hpp  RBGameActor.cpp  RBGameActor.hpp  RBGameObject.cpp  RBGameObject.hpp  RBLog.cpp  RBLog.hpp  RBMath.cpp  RBMath.hpp  RBPrimitive.cpp  RBPrimitive.hpp  RBRender.cpp  RBRender.hpp  RBRenderHelper.cpp  RBRenderHelper.hpp  RBRenderer.cpp  RBRenderer.hpp  RBShader.cpp  RBShader.hpp  RBShader2D.cpp  RBShader2D.hpp  RBShader3D.cpp  RBShader3D.hpp  RBVector2.cpp  RBVector2.hpp
partV/app/src/main/cpp/game/: Cube.cpp  Cube.hpp  Pong.cpp  Pong.hpp
partV/app/src/main/cpp/platform/: main.cpp
partV/app/src/main/res/values/: strings.xml  themes.xml
partV/gradle/wrapper/: gradle-wrapper.properties
partVI/app/: build.gradle.kts
partVI/app/src/main/cpp/: CMakeLists.txt
partVI/app/src/main/cpp/base/: RBClock.cpp  RBColor.hpp  RBGame.cpp  RBGame.hpp  RBLog.cpp  (+8 more)
partVI/gradle/: libs.versions.toml
partVII/app/src/main/cpp/: CMakeLists.txt
(+33 files in other folders)
